[gd_scene load_steps=10 format=3 uid="uid://bbfq4dms15rbu"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_nn1au"]
[ext_resource type="Texture2D" uid="uid://bwqai3p07c6s5" path="res://assets/sprites/elements/pestilence_ui.png" id="2_ki2fu"]
[ext_resource type="Texture2D" uid="uid://m0vtx42h8ef" path="res://assets/sprites/elements/hemomancy_ui.png" id="3_4lg5y"]
[ext_resource type="Texture2D" uid="uid://dmdfnyqvvu31r" path="res://assets/ui elements/itemselected.png" id="3_6740d"]
[ext_resource type="Texture2D" uid="uid://gvr6ykhuotxj" path="res://assets/sprites/elements/convalescence_ui.png" id="4_2f3mg"]
[ext_resource type="Texture2D" uid="uid://db0ydqyb5u7wy" path="res://assets/sprites/elements/bonecraft_ui.png" id="5_hinfl"]
[ext_resource type="Texture2D" uid="uid://c4vlfp2nrhl4f" path="res://assets/sprites/elements/occultism_ui.png" id="6_du01d"]
[ext_resource type="Texture2D" uid="uid://caqvykxkv4tc" path="res://assets/sprites/elements/defaultcombo_ui.png" id="7_t8x7v"]

[sub_resource type="LabelSettings" id="LabelSettings_ha46s"]
font_size = 24

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nn1au")
sprites = Array[Texture2D]([ExtResource("2_ki2fu"), ExtResource("3_4lg5y"), ExtResource("4_2f3mg"), ExtResource("5_hinfl"), ExtResource("6_du01d"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v"), ExtResource("7_t8x7v")])
default_ui_sprite = ExtResource("7_t8x7v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_right = 168.0
offset_bottom = 98.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="Control/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Health: 5"
label_settings = SubResource("LabelSettings_ha46s")

[node name="ShieldLabel" type="Label" parent="Control/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Shield: 0"
label_settings = SubResource("LabelSettings_ha46s")

[node name="ElementTextureContainer" type="HBoxContainer" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -155.0
offset_right = 400.0
grow_vertical = 0
alignment = 1

[node name="Slot0" type="GridContainer" parent="Control/ElementTextureContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label0" type="Label" parent="Control/ElementTextureContainer/Slot0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "1
"
horizontal_alignment = 1

[node name="Element0" type="TextureRect" parent="Control/ElementTextureContainer/Slot0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Selected0" type="TextureRect" parent="Control/ElementTextureContainer/Slot0/Element0"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6740d")

[node name="Slot1" type="GridContainer" parent="Control/ElementTextureContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label1" type="Label" parent="Control/ElementTextureContainer/Slot1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "2"
horizontal_alignment = 1

[node name="Element1" type="TextureRect" parent="Control/ElementTextureContainer/Slot1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Selected1" type="TextureRect" parent="Control/ElementTextureContainer/Slot1/Element1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6740d")

[node name="Slot2" type="GridContainer" parent="Control/ElementTextureContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Control/ElementTextureContainer/Slot2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "3"
horizontal_alignment = 1

[node name="Element2" type="TextureRect" parent="Control/ElementTextureContainer/Slot2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Selected2" type="TextureRect" parent="Control/ElementTextureContainer/Slot2/Element2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6740d")
